# src/main/resources/api.yaml
@@ -75,13 +75,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/PrenotazioneDTO'
+        '404':
+          description: prenotazione corrente non trovata
     post:
       tags:
         - prenotazione
       summary: inserisci prenotazione
       description: inserimento prenotazione
       operationId: creaPrenotazione
-
       requestBody:
         description: dati da inserire
         content:
@@ -90,12 +91,11 @@ paths:
               $ref: '#/components/schemas/PrenotazioneRequest'
         required: true
       parameters:
-        - name: idUser
+        - name: userKey
           in: query
           required: true
           schema:
-            type: integer
-            format: int32
+            type: string
 
       responses:
         '200':
@@ -114,12 +114,11 @@ paths:
       description: utente corrente
       operationId: currentUtente
       parameters:
-        - name: idUtente
+        - name: userKey
           in: query
           required: true
           schema:
-            type: integer
-            format: int32
+            type: string
       responses:
         '200':
           description: succesful
@@ -127,6 +126,9 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UtenteDTO'
+        '404':
+          description: utente non trovato
+
   /aggiornaPrenotazione:
     put:
       tags:
@@ -151,11 +153,7 @@ paths:
       responses:
         '200':
           description: successful
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PrenotazioneDTO'
-        '400':
+        '404':
           description: errore nei dati
   /aggiornaUtente:
     put:
@@ -172,19 +170,14 @@ paths:
               $ref: '#/components/schemas/UtenteRequest'
         required: true
       parameters:
-        - name: idUser
+        - name: userKey
           in: query
           required: true
           schema:
-            type: integer
-            format: int32
+            type: string
       responses:
         '200':
           description: successful
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UtenteDTO'
         '400':
           description: errore nei dati
   /delete/{id}:
@@ -204,23 +197,27 @@ paths:
       responses:
         '200':
           description: successful
-  /deleteUtente/{id}:
-    delete:
-      tags:
-        - utente
-      summary: elimina utente
-      description: dato id, elimina utente
-      operationId: deleteUtente
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int32
-      responses:
-        '200':
-          description: successful
+        '404':
+          description: prenotazione non trovata
+        '400':
+          description: form scorretto
+#  /deleteUtente/{id}:
+#    delete:
+#      tags:
+#        - utente
+#      summary: elimina utente
+#      description: dato id, elimina utente
+#      operationId: deleteUtente
+#      parameters:
+#        - name: id
+#          in: path
+#          required: true
+#          schema:
+#            type: integer
+#            format: int32
+#      responses:
+#        '200':
+#          description: successful
   /:
     get:
       tags:
@@ -229,13 +226,12 @@ paths:
       description: dato id, restituisce le prenotazioni
       operationId: getDashboard
       parameters:
-        - name: idUtente
+        - name: userKey
           in: query
           description: id utente
           required: true
           schema:
-            type: integer
-            format: int32
+            type: string
         - name: page
           in: query
           description: pagina
@@ -261,6 +257,8 @@ paths:
                 $ref: '#/components/schemas/Page'
                 item:
                   $ref: '#/components/schemas/PrenotazioneDTO'
+        '404':
+          description: prenotazioni non trovate
   /utenti:
     get:
       tags:
@@ -294,6 +292,8 @@ paths:
                 $ref: '#/components/schemas/Page'
                 item:
                   $ref: '#/components/schemas/UtenteDTO'
+        '404':
+          description: utenti non trovati
 
   /searchPrenotazioniUtente:
     post:
@@ -302,13 +302,12 @@ paths:
       summary: restituisce le prenotazioni dell'utente
       operationId: searchPrenotazioniUtente
       parameters:
-        - name: idUser
+        - name: userKey
           in: query
-          description: id utente
+          description: uuid utente
           required: true
           schema:
-            type: integer
-            format: int32
+            type: string
         - name: page
           in: query
           description: pagina
@@ -324,7 +323,7 @@ paths:
           schema:
             type: integer
             format: int32
-            default: 0
+            default: 5
       requestBody:
         description: dati per la ricerca
         content:
@@ -340,6 +339,8 @@ paths:
                 $ref: '#/components/schemas/Page'
                 item:
                   $ref: '#/components/schemas/UtenteDTO'
+        '404':
+          description: prenotazioni utente non trovate
   /searchPrenotazioni:
     post:
       tags:
@@ -354,7 +355,7 @@ paths:
           schema:
             type: integer
             format: int32
-            default: 5
+            default: 0
         - name: size
           in: query
           description: size
@@ -378,6 +379,8 @@ paths:
                 $ref: '#/components/schemas/Page'
                 item:
                   $ref: '#/components/schemas/PrenotazioneDTO'
+        '404':
+          description: prenotazioni non trovate
   /signup:
     post:
       tags:
@@ -395,7 +398,21 @@ paths:
           description: succesful
         '400':
           description: errore nell'inserimento
-
+  /deleteUser:
+    delete:
+      tags:
+        - utente
+      operationId: deleteUtente
+      parameters:
+        - name: userKey
+          in: query
+          schema:
+            type: string
+      responses:
+        '200':
+          description: succesful
+        '404':
+          description: utente non trovato
 
 components:
   schemas:
@@ -449,9 +466,6 @@ components:
     UtenteDTO:
       type: object
       properties:
-        id:
-          type: integer
-          format: int32
         nome:
           type: string
         cognome:
@@ -469,6 +483,8 @@ components:
         regione:
           type: string
         indirizzo:
+          type: string
+        userKey:
           type: string
 
     UtenteFiltro:
